<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/profil"
        android:title="@string/profil"
        android:icon="@drawable/baseline_account_circle_black_18"
        />

    <item
        android:id="@+id/history"
        android:title="@string/history"
        android:icon="@drawable/baseline_restore_black_18"
        />

    <item
        android:id="@+id/param"
        android:title="@string/param"
        android:icon="@drawable/baseline_restore_black_18"
        />

    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:icon="@drawable/ic_help_black_18dp"
        />


    <item
        android:id="@+id/deco"
        android:title="@string/deco"
        android:icon="@drawable/baseline_power_settings_new_black_18"
        />

</menu>
