<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/label"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:paddingTop="10dp"
                android:src="@drawable/wazaby"
                android:layout_centerHorizontal="true"
                />

            <View
                android:id="@+id/view1"
                android:layout_below="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                />

            <RelativeLayout
                android:id="@+id/block"
                android:layout_below="@+id/view1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10dp"
                >



                <LinearLayout
                    android:id="@+id/email_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_email_black_24"
                        android:layout_gravity="center"
                        android:tint="@color/colorPrimary"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/password_block"
                android:layout_below="@+id/email_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_lock_black_24"
                    android:tint="@color/colorPrimary"
                    android:layout_gravity="center"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled = "true"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/connexion"
                android:layout_below="@+id/password_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/connexion"
                android:background="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white" />

        </RelativeLayout>



        <View
            android:id="@+id/view2"
            android:layout_below="@+id/block"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/passforget"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/view2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/passforget"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            />


        <LinearLayout
            android:id="@+id/aboutblock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_help_black_18dp"
                android:tint="@color/colorPrimary"
                />

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/colorPrimary"
                />
        </LinearLayout>

    </RelativeLayout>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>