<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/label"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:paddingTop="10dp"
            android:src="@drawable/wazaby"
            android:layout_centerHorizontal="true"
            />


        <View
            android:id="@+id/view1"
            android:layout_below="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            />


        <LinearLayout
            android:id="@+id/block"
            android:layout_below="@+id/view1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            >



            <LinearLayout
                android:id="@+id/email_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_email_black_24"
                    android:layout_gravity="center"
                    android:tint="@color/colorPrimary"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/inscript_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <TextView
                android:id="@+id/message"
                android:visibility="gone"
                android:textColor="@android:color/holo_red_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code_de_validation"
                android:layout_marginTop="10dp"
                />


            <LinearLayout
                android:id="@+id/code_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_check_circle_black_36"
                    android:layout_gravity="center"
                    android:tint="@color/colorPrimary"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_code_de_verification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/code_de_libelle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/code_editext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/send"
                android:layout_below="@+id/password_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/inscript_next"
                android:background="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white" />



        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_below="@+id/block"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            />




    </RelativeLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>
