<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/label"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:paddingTop="10dp"
            android:src="@drawable/wazaby"
            android:layout_centerHorizontal="true"
            />


        <View
            android:id="@+id/view1"
            android:layout_below="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            />


        <RelativeLayout
            android:id="@+id/block"
            android:layout_below="@+id/view1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            >



            <LinearLayout
                android:id="@+id/nom_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_account_circle_black_36dp"
                    android:layout_gravity="center"
                    android:tint="@color/colorPrimary"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_nom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/inscript_nom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/prenom_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nom_block"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_account_circle_black_36dp"
                    android:layout_gravity="center"
                    android:tint="@color/colorPrimary"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_prenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/inscript_prenom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/prenom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/sexe_block"
                android:layout_below="@+id/prenom_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <RadioGroup
                    android:id="@+id/monsexe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Masculin"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text="Feminin"/>

                </RadioGroup>


            </LinearLayout>



            <com.google.android.material.button.MaterialButton
                android:id="@+id/send"
                android:layout_below="@+id/sexe_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/inscript_next"
                android:background="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white" />



        </RelativeLayout>

        <View
            android:id="@+id/view2"
            android:layout_below="@+id/block"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            />




    </RelativeLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>
